# seamless-parametrization-penner

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
app/: CMakeLists.txt  generate_frame_field.cpp  parametrize_seamless.cpp
figures/: fig-all.sh  fig-myles-dataset.sh  fig-myles-examples.sh  fig-performance.sh  fig-quality.sh  fig-stress-test.sh  fig-teaser.sh  fig-tetwild-dataset.sh  fig-tetwild-examples.sh  pipeline.sh
figures/pipelines/: myles_dataset.json  myles_examples.json  performance.json  quality_final.json  quality_initial.json  stress_test.json  teaser.json  teaser_no_cones.json  teaser_zoom.json  tetwild_dataset.json  tetwild_examples.json  tetwild_examples_zoom.json
scripts/datasets/: thingi10k_closed.py  thingi10k_closed_all.py  thingi10k_connected.py  thingi10k_connected_all.py
scripts/figures/: combine_intrinsic.py  consolidate_iteration_data.py  get_failures.py  intrinsic.py  make_myles_plots.sh  make_quality_plots.sh  make_tetwild_input.sh  make_tetwild_results.sh  mesh_info.py  move_intrinsic.sh  myles_input_histogram.py  myles_results_histogram.py  quality_histogram.py  symmetric_dirichlet_histogram.py  tetwild_input_histogram.py  tetwild_results_histogram.py  threshold_timings.py  threshold_timings_plots.py
scripts/utility/: compare_basis_loops.sh  crossfield.sh  find_invalid_cones.py  fix_nonmanifold.py  list_meshes.sh  list_small_meshes.py  mesh_statistics.sh  move_uvs.sh  validate_crossfield.sh
